<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zergitas.teamb.myapplication.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:id="@+id/btn_new"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_new" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/general"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_power" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/security_on_off"
                            android:textSize="20sp" />

                        <ToggleButton
                            android:id="@+id/sw_on_of"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/bg_toogle"
                            android:textOff=""
                            android:textOn="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/color_black" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_change_lock" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/btn_change_pass"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/change_password"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/color_black"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/lock_amp_feel"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_change_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/btn_change_wallpaper"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:text="@string/change_wallpaper"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/color_black"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_change_clock" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/use_24_hour_format"
                            android:textSize="20sp" />

                        <ToggleButton
                            android:id="@+id/sw_24h"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/bg_toogle"
                            android:textOff=""
                            android:textOn="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/color_black"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_lock_grid" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/show_knock_grid"
                            android:textSize="20sp" />

                        <ToggleButton
                            android:id="@+id/sw_knock_grid"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginRight="16dp"
                            android:background="@drawable/bg_toogle"
                            android:textOff=""
                            android:textOn="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/color_black"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/other"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_vote" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/btn_rate"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/rate_us"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/color_black"></LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="1">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_store" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/btn_more_app"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/more_apps"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:background="@color/color_black"></LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
